objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Proposal_Grouping__c</fullName>
        <label>Proposal Grouping</label>
        <picklist>
            <picklistValues>
                <fullName>A-Package</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-CRM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C-ILM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>D-Desking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E-Inventory Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>F-Market Pricing Tool</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>G-Website</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>H-Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I-Fulfillment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>J-Printed Materials</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Y-Additional Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Z-Setup</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposal_Sort_Order__c</fullName>
        <label>Proposal Sort Order</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quantity_Exception__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quantity Exception</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Product relation required to Close Won an opportunity</inlineHelpText>
        <label>Related Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Related Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Show_on_Bill__c</fullName>
        <formula>IF(  
AND( Production_Issue__c = NULL, IsPackageParent__c = False,  Credit_Product__c = &quot;NO&quot;, ISPICKVAL( Product_BU__c, &quot;VinSolutions&quot;),isTraining__c = False),
 &quot;NO&quot;, &quot;YES&quot;)</formula>
        <label>Show on Bill</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject_to_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product will be counted by the Initial Load/Generate More Load system used by Tier 1/Tier 2/OEM opportunities.</description>
        <inlineHelpText>If checked, this product will be counted by the Initial Load/Generate More Load system used by Tier 1/Tier 2/OEM opportunities.</inlineHelpText>
        <label>Subject to Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TNOPPST__Tax_Code__c</fullName>
        <inlineHelpText>This is the Avalara Tax Code for product level taxabiltiy rules.</inlineHelpText>
        <label>Tax Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>URL_Picture__c</fullName>
        <label>URL Picture</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ValidationRules__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ValidationRules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2013ProcessTemp__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2013ProcessTemp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isPackage__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Used in conjunction with Child_Product_No_Cost_Override__c. If both are false when a package is added, this product will be zeroed out.</inlineHelpText>
        <label>isPackage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>isTraining__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isTraining</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>requiresWelcomePacket__c</fullName>
        <defaultValue>false</defaultValue>
        <label>requiresWelcomePacket</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vAuto_Subscription_Name__c</fullName>
        <label>vAuto Subscription Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>Active_2014_Price_Book_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Project_Definition__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>In_the_2014_Price_Book__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.Vin_Haystak_Shared</value>
        </filters>
        <label>Active 2014 Price Book Products</label>
    </listViews>
    <listViews>
        <fullName>Active_Website_Products</fullName>
        <booleanFilter>1 AND 2 AND (3 OR 4)</booleanFilter>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <columns>ProdProj_Dept2_Owner__c</columns>
        <columns>ProdProj_Dept3_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>notContain</operation>
            <value>onetime fee</value>
        </filters>
        <filters>
            <field>Grouping_Category__c</field>
            <operation>equals</operation>
            <value>Website</value>
        </filters>
        <filters>
            <field>ProdProj_Default_Owner__c</field>
            <operation>equals</operation>
            <value>Creative Queue</value>
        </filters>
        <label>Active Website Products</label>
    </listViews>
    <listViews>
        <fullName>Active_vAuto_2014_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Project_Definition__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.RECORD_TYPE</field>
            <operation>equals</operation>
            <value>Product2.vAuto</value>
        </filters>
        <label>Active vAuto 2014 Products</label>
    </listViews>
    <listViews>
        <fullName>AllProducts</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>In_the_2013_Price_Book__c</columns>
        <columns>In_the_2014_Price_Book__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Suite__c</columns>
        <columns>PRODUCT2.CUSTOMER_PRODUCT_ID</columns>
        <columns>Product_BU__c</columns>
        <columns>Production_Department__c</columns>
        <columns>Production_Issue__c</columns>
        <columns>Grouping_Category__c</columns>
        <columns>isPackage__c</columns>
        <columns>Child_Product_No_Cost_Override__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>IsPackageParent__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Active_Non_Onetime_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>Production_Issue__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>notContain</operation>
            <value>onetime fee</value>
        </filters>
        <label>All Active Non-Onetime Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_Onetime_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <columns>Hardware_Product__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>notContain</operation>
            <value>onetime fee</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>notEqual</operation>
            <value>Monthly Reoccuring</value>
        </filters>
        <label>All Active Onetime Products</label>
    </listViews>
    <listViews>
        <fullName>All_Active_PackageParent_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>In_the_2013_Price_Book__c</columns>
        <columns>PackageNotForTinderbox__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>Production_Issue__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>isPackage__c</columns>
        <columns>Child_Product_No_Cost_Override__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>IsPackageParent__c</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsPackageParent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active PackageParent Products</label>
    </listViews>
    <listViews>
        <fullName>All_Inactive_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Product_Suite__c</columns>
        <columns>PRODUCT2.DESCRIPTION</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>PRODUCT2.LAST_UPDATE</field>
            <operation>equals</operation>
            <value>5/27/2015 12:00 AM</value>
        </filters>
        <label>All Inactive Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Packages</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>IsPackageParent__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Packages</label>
    </listViews>
    <listViews>
        <fullName>All_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>PRODUCT2.ACTIVE</columns>
        <columns>Cost_Factor__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Project_Definition__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Does_Not_Generate_a_Project_Piece</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <columns>Project_Definition__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Production_Issue__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.FAMILY</field>
            <operation>notEqual</operation>
            <value>Setup fee</value>
        </filters>
        <filters>
            <field>PRODUCT2.NAME</field>
            <operation>notContain</operation>
            <value>Package</value>
        </filters>
        <label>Does Not Generate a Project Piece</label>
    </listViews>
    <listViews>
        <fullName>Generates_a_Project_Piece</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Production_Issue__c</field>
            <operation>notEqual</operation>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Generates a Project Piece</label>
    </listViews>
    <listViews>
        <fullName>Haystak_Products</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>Project_Definition__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Project_Separation__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Product_BU__c</field>
            <operation>equals</operation>
            <value>Haystak</value>
        </filters>
        <filters>
            <field>In_the_2014_Price_Book__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Haystak Products</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Mark_Test</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>In_the_2014_Price_Book__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Mark Test</label>
    </listViews>
    <listViews>
        <fullName>No_Tax_Code</fullName>
        <columns>PRODUCT2.NAME</columns>
        <columns>TNOPPST__Tax_Code__c</columns>
        <columns>ProdProj_Default_Owner__c</columns>
        <columns>PRODUCT2.FAMILY</columns>
        <columns>Production_Department__c</columns>
        <columns>PRODUCT2.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <columns>Grouping_Category__c</columns>
        <columns>Freight_Cost__c</columns>
        <columns>Project_Separation__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TNOPPST__Tax_Code__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>PRODUCT2.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>No Tax Code</label>
    </listViews>
    <recordTypes>
        <fullName>Vin_Haystak_Shared</fullName>
        <active>true</active>
        <label>Vin/Haystak/Shared</label>
    </recordTypes>
    <recordTypes>
        <fullName>vAuto</fullName>
        <active>true</active>
        <label>vAuto</label>
    </recordTypes>
</CustomObject>